--- a/.config/gtk-3.0/genmon-config.css
+++ b/.config/gtk-3.0/genmon-config.css
@@ -1,6 +1,6 @@
 /* Genmon Battery widget */
 #genmon-1 box {
-    background-color: green; /* TEMPORAL COLOR */
+    background-color: #1B5E20; 
     padding-left: 5px;
     padding-right: 5px;
 }
@@ -8,11 +8,11 @@
 
 /* Genmon DateTime widget */
 #genmon-4 box {
-    background-color: #5E8EDA;
+    background-color: #2E7D32;
     /* Make a triangle pointing to left*/
-    border-top: 5px solid #5E8EDA;
-    border-bottom: 5px solid #5E8EDA;
-    border-right: 5px solid green;
+    border-top: 5px solid #2E7D32;
+    border-bottom: 5px solid #2E7D32;
+    border-right: 5px solid #1B5E20;
 }
 
 #genmon-4 label {
@@ -24,10 +24,10 @@
 
 /* Genmon Memory widget */
 #genmon-2 box {
-    background-color: #7F8487;
-    border-top: 5px solid #7F8487;
-    border-bottom: 5px solid #7F8487;
-    border-right: 5px solid #5E8EDA;
+    background-color: #388E3C;
+    border-top: 5px solid #388E3C;
+    border-bottom: 5px solid #388E3C;
+    border-right: 5px solid #2E7D32;
 }
 
 #genmon-2 label {
@@ -38,10 +38,10 @@
 
 /* Genmon Media Player widget */
 #genmon-5 box {
-    background-color: #B25068;
-    border-top: 5px solid #B25068;
-    border-bottom: 5px solid #B25068;
-    border-right: 5px solid #7F8487;
+    background-color: #43A047;
+    border-top: 5px solid #43A047;
+    border-bottom: 5px solid #43A047;
+    border-right: 5px solid #388E3C;
 }
 
 #genmon-5 label {
